Extend the about me page

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,3 +6,20 @@
 p {
   margin-bottom: 1.2em !important;
 }
+
+hr {
+  height: 4px !important;
+  margin: 35px 0 !important;
+}
+
+a {
+  color: #2568ba !important;
+}
+
+a:visited {
+  color: #2568ba !important;
+}
+
+.site-header a {
+  color: #111 !important;
+}
